--- a/src/astar_planner/package.xml
+++ b/src/astar_planner/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>astar_planner</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>A simple Astar search planner</description>
   <maintainer email="alex_q7@qq.com">qz</maintainer>
   <license>Apache-2.0</license>
 
@@ -11,7 +11,11 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>geometry_msgs</depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
